; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_fz_java_device_ignore_text.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_fz_java_device_ignore_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, %struct.TYPE_9__** }
%struct.TYPE_9__ = type { i64 (%struct.TYPE_9__**)*, i32 (%struct.TYPE_9__**, i32, i32, i32, i32)* }

@mid_Device_ignoreText = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32)* @fz_java_device_ignore_text to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fz_java_device_ignore_text(i32* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_8__*, align 8
  %10 = alloca %struct.TYPE_9__**, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %13 = load i32*, i32** %6, align 8
  %14 = bitcast i32* %13 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %14, %struct.TYPE_8__** %9, align 8
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %16 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %15, i32 0, i32 1
  %17 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %16, align 8
  store %struct.TYPE_9__** %17, %struct.TYPE_9__*** %10, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %10, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = call i32 @to_Text(i32* %18, %struct.TYPE_9__** %19, i32* %20)
  store i32 %21, i32* %11, align 4
  %22 = load i32*, i32** %5, align 8
  %23 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %10, align 8
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @to_Matrix(i32* %22, %struct.TYPE_9__** %23, i32 %24)
  store i32 %25, i32* %12, align 4
  %26 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %10, align 8
  %27 = load %struct.TYPE_9__*, %struct.TYPE_9__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %27, i32 0, i32 1
  %29 = load i32 (%struct.TYPE_9__**, i32, i32, i32, i32)*, i32 (%struct.TYPE_9__**, i32, i32, i32, i32)** %28, align 8
  %30 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %10, align 8
  %31 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %32 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = load i32, i32* @mid_Device_ignoreText, align 4
  %35 = load i32, i32* %11, align 4
  %36 = load i32, i32* %12, align 4
  %37 = call i32 %29(%struct.TYPE_9__** %30, i32 %33, i32 %34, i32 %35, i32 %36)
  %38 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %10, align 8
  %39 = load %struct.TYPE_9__*, %struct.TYPE_9__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %39, i32 0, i32 0
  %41 = load i64 (%struct.TYPE_9__**)*, i64 (%struct.TYPE_9__**)** %40, align 8
  %42 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %10, align 8
  %43 = call i64 %41(%struct.TYPE_9__** %42)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %49

45:                                               ; preds = %4
  %46 = load i32*, i32** %5, align 8
  %47 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %10, align 8
  %48 = call i32 @fz_throw_java(i32* %46, %struct.TYPE_9__** %47)
  br label %49

49:                                               ; preds = %45, %4
  ret void
}

declare dso_local i32 @to_Text(i32*, %struct.TYPE_9__**, i32*) #1

declare dso_local i32 @to_Matrix(i32*, %struct.TYPE_9__**, i32) #1

declare dso_local i32 @fz_throw_java(i32*, %struct.TYPE_9__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
